# codequota

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
skills/codequota/: SKILL.md
src/: cli.rs  lib.rs  main.rs
src/providers/: claude_code.rs  claude_common.rs  claude_desktop.rs  codex.rs  error.rs  mod.rs  model.rs  output.rs
tests/: cli.rs
