[package]
name = "codequota"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[dev-dependencies]
assert_cmd = "2.1.1"
mockito = "1.7.0"
predicates = "3.1.3"
serial_test = "3.2.0"
tempfile = "3.23.0"
